[gd_scene load_steps=2 format=3 uid="uid://bp1wsikkjnekq"]

[ext_resource type="Script" path="res://homepage.gd" id="1_hpxx2"]

[node name="Homepage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hpxx2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[node name="UpdateAPIKeyButton" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Update API Key"

[node name="UpdateAPIKeyWindow" type="ColorRect" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172833, 0.172833, 0.172833, 1)

[node name="XButton" type="Button" parent="Background/UpdateAPIKeyWindow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -18.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="RichTextLabel" type="RichTextLabel" parent="Background/UpdateAPIKeyWindow"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_right = 180.0
offset_bottom = 50.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Paste your start.gg developer API key here
(this is only stored locally)[/center]"

[node name="LineEdit" type="LineEdit" parent="Background/UpdateAPIKeyWindow"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5313
offset_top = -15.5
offset_right = 33.5313
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="Background/UpdateAPIKeyWindow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.5
offset_top = -32.0
offset_right = 35.5
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"

[connection signal="pressed" from="Background/UpdateAPIKeyButton" to="." method="_on_update_api_key_button_pressed"]
[connection signal="pressed" from="Background/UpdateAPIKeyWindow/XButton" to="." method="_on_updateapikeywindow_x_button_pressed"]
[connection signal="pressed" from="Background/UpdateAPIKeyWindow/ConfirmButton" to="." method="_on_updateapikeywindow_confirm_button_pressed"]
